; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libdtrace/common/extr_dt_module.c_dtrace_object_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libdtrace/common/extr_dt_module.c_dtrace_object_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DTRACE_OBJ_EVERY = common dso_local global i8* null, align 8
@DTRACE_OBJ_KMODS = common dso_local global i8* null, align 8
@DTRACE_OBJ_UMODS = common dso_local global i8* null, align 8
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dtrace_object_info(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i8*, i8** @DTRACE_OBJ_EVERY, align 8
  %11 = icmp eq i8* %9, %10
  br i1 %11, label %23, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = load i8*, i8** @DTRACE_OBJ_KMODS, align 8
  %15 = icmp eq i8* %13, %14
  br i1 %15, label %23, label %16

16:                                               ; preds = %12
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** @DTRACE_OBJ_UMODS, align 8
  %19 = icmp eq i8* %17, %18
  br i1 %19, label %23, label %20

20:                                               ; preds = %16
  %21 = load i32*, i32** %7, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %20, %16, %12, %3
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* @EINVAL, align 4
  %26 = call i32 @dt_set_errno(i32* %24, i32 %25)
  store i32 %26, i32* %4, align 4
  br label %43

27:                                               ; preds = %20
  %28 = load i32*, i32** %5, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = call i32* @dt_module_from_object(i32* %28, i8* %29)
  store i32* %30, i32** %8, align 8
  %31 = icmp eq i32* %30, null
  br i1 %31, label %32, label %33

32:                                               ; preds = %27
  store i32 -1, i32* %4, align 4
  br label %43

33:                                               ; preds = %27
  %34 = load i32*, i32** %5, align 8
  %35 = load i32*, i32** %8, align 8
  %36 = call i32 @dt_module_load(i32* %34, i32* %35)
  %37 = icmp eq i32 %36, -1
  br i1 %37, label %38, label %39

38:                                               ; preds = %33
  store i32 -1, i32* %4, align 4
  br label %43

39:                                               ; preds = %33
  %40 = load i32*, i32** %8, align 8
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @dt_module_info(i32* %40, i32* %41)
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %39, %38, %32, %23
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i32 @dt_set_errno(i32*, i32) #1

declare dso_local i32* @dt_module_from_object(i32*, i8*) #1

declare dso_local i32 @dt_module_load(i32*, i32*) #1

declare dso_local i32 @dt_module_info(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
